move ctrl panel to top left

--- a/src/components/ui/ControlPanel.css
+++ b/src/components/ui/ControlPanel.css
@@ -1,7 +1,7 @@
 .control-panel {
   position: absolute;
-  bottom: 1rem;
-  right: 1rem;
+  top: 1rem;
+  left: 1rem;
   font-size: 0.75rem;
   color: #e5e7eb;
 }
